--- a/src/package.xml
+++ b/src/package.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
+    <fullName>PapaParse</fullName>
     <types>
         <members>baseCSV</members>
         <members>inputCSV</members>
