--- a/src/package.xml
+++ b/src/package.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <fullName>PapaParse</fullName>
+    <apiAccessLevel>Unrestricted</apiAccessLevel>
+    <namespacePrefix>lightningcsv</namespacePrefix>
     <types>
         <members>baseCSV</members>
+        <members>csvTestApp</members>
         <members>inputCSV</members>
+        <members>tableCell</members>
         <name>AuraDefinitionBundle</name>
     </types>
     <types>
